Adição do Placar do Numero sorteado

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,19 @@
                 <input type="number">
             </div>
         </section>
+        <section>
+            <div class="bg-black text-white px-6 py-2 rounded-lg">
+                <span>Número sorteado está entre:</span>
+                <div class="flex justify-center">
+                    <div class="border-r-2 pr-4">
+                        <span>50</span>
+                    </div>
+                    <div class="pl-4">
+                        <span>100</span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="">
             <h2 id="js-nome-jogador02">Jogador 02</h2>
             <div class="">
@@ -39,7 +52,7 @@
     <main class="flex items-center justify-between bg-blue-500">
         <section class="p-6">
             <div class="flex flex-col">
-                <input type="number">
+                <input class="text-center rounded-md" type="number" placeholder="Digite um número">
                 <button class="mt-2 p-2 bg-green-500 text-white font-bold">Jogar</button>
             </div>
         </section>
@@ -78,7 +91,7 @@
         </section>
         <section class="p-6">
             <div class="flex flex-col">
-                <input type="number">
+                <input class="text-center rounded-md" type="number" placeholder="Digite um número">
                 <button class="mt-2 p-2 bg-green-500 text-white font-bold">Jogar</button>
             </div>
         </section>
