--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <div id="js-modal-partida" class="hidden m-auto w-full h-full fixed top-0 z-10 flex justify-center items-center bg-[#0000004a]">
-        <dialog id="js-modal-iniciar-partida" class="m-auto z-20 border-0 ">
+        <dialog id="js-modal-iniciar-partida" class="m-auto z-20 border-0 rounded-2xl">
             <section class="p-4">
-                <form onsubmit="criarJogador(document.getElementById('js-input-nome-jog01').value , document.getElementById('js-input-nome-jog02').value , event)">
+                <form class="flex flex-col gap-4 justify-center items-center" onsubmit="criarJogador(document.getElementById('js-input-nome-jog01').value , document.getElementById('js-input-nome-jog02').value,document.getElementById('js-input-numero-maximo').value ,event)">
                     <div class="">
-                        <input id="js-input-nome-jog01" type="text" placeholder="Nome do Jogador 01" required>
+                        <input id="js-input-nome-jog01" class="border-black border-2 rounded-xl px-6 py-2" type="text" placeholder="Nome do Jogador 01" required>
                     </div>
                     <div class="">
-                        <input id="js-input-nome-jog02" type="text" placeholder="Nome do Jogador 02" required>
+                        <input id="js-input-nome-jog02" class="border-black border-2 rounded-xl px-6 py-2" type="text" placeholder="Nome do Jogador 02" required>
                     </div>
-                    <button type="submit" class="m-4 p-2 w-36 bg-green-500 text-white font-bold">Criar Jogador</button>
+                    <div class="">
+                        <input id="js-input-numero-maximo" class="border-black border-2 rounded-xl px-6 py-2" type="text" placeholder="Digite o maior número que possa ser sorteado:" required>
+                    </div>
+                    <button type="submit" class="m-4 p-2 w-36 bg-green-500 text-white font-bold rounded-lg">Criar Jogador</button>
                 </form>
             </section>
         </dialog>
     </div>
-    <header class=" flex justify-between p-6 bg-red-500">
+    <header class="flex justify-between p-6 bg-red-500">
         <section class="">
             <h2 id="js-nome-jogador01">Jogador 01</h2>
             <div class="">
@@ -34,10 +37,10 @@
                 <span>Número sorteado está entre:</span>
                 <div class="flex justify-center">
                     <div class="border-r-2 pr-4">
-                        <span>50</span>
+                        <span id="js-numero-minimo">0</span>
                     </div>
                     <div class="pl-4">
-                        <span>100</span>
+                        <span id="js-numero-maximo">...</span>
                     </div>
                 </div>
             </div>
@@ -52,8 +55,8 @@
     <main class="flex items-center justify-between bg-blue-500">
         <section class="p-6">
             <div class="flex flex-col">
-                <input class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button class="mt-2 p-2 bg-green-500 text-white font-bold">Jogar</button>
+                <input id="js-input-valor-jog01"  class="text-center rounded-md" type="number" placeholder="Digite um número">
+                <button id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
             </div>
         </section>
         <section class="p-2 bg-red-500 text-center">
@@ -91,8 +94,8 @@
         </section>
         <section class="p-6">
             <div class="flex flex-col">
-                <input class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button class="mt-2 p-2 bg-green-500 text-white font-bold">Jogar</button>
+                <input id="js-input-valor-jog02" class="text-center rounded-md" type="number" placeholder="Digite um número">
+                <button id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
             </div>
         </section>
     </main>
@@ -102,7 +105,7 @@
                 <button class="w-36 p-2 text-white font-bold bg-black">Restart</button>
             </div>
             <div class="">
-                <button id="js-button-iniciar-partida" class="w-36 p-2 text-white font-bold bg-green-500" onclick="iniciarPartida()">Iniciar</button>
+                <button id="js-button-iniciar-partida" class="w-36 p-2 text-white font-bold bg-green-500 " onclick="iniciarPartida()">Iniciar</button>
             </div>
             <div class="">
                 <button class="w-36 p-2 text-white font-bold bg-yellow-500">Finalizar</button>
