--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <section class="">
             <h2 id="js-nome-jogador01">Jogador 01</h2>
             <div class="">
-                <input type="number">
+                <input id="js-placar-jog01" type="number" value="0">
             </div>
         </section>
         <section>
@@ -48,7 +48,7 @@
         <section class="">
             <h2 id="js-nome-jogador02">Jogador 02</h2>
             <div class="">
-                <input type="number">
+                <input id="js-placar-jog02" type="number" value="0">
             </div>
         </section>
     </header>
@@ -56,7 +56,7 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog01"  class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-400" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
+                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
             </div>
         </section>
         <section class="p-2 bg-red-500 text-center">
@@ -75,7 +75,7 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog02" class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-400" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
+                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
             </div>
         </section>
     </main>
