--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,33 @@
             </section>
         </dialog>
     </div>
+    <div class="hidden w-full h-full fixed flex justify-center items-center bg-[#0000004a]">
+        <dialog class="p-7 rounded-2xl text-center relative">
+            <button class="z-10 absolute -right-5 -top-5 p-2 rounded-full w-12 h-12 bg-black text-white font-bold">X</button>
+            <section class="flex flex-col justify-center items-center">
+                <div class="font-bold">
+                    <span class="text-2xl">Você Ganhou!!!</span>
+                </div>
+                <div class="pt-1 font-bold ">
+                    <span id="js-nome-ganhador" class="text-5xl font-bold uppercase">Natanael</span>
+                </div>
+                <img src="/img/trofeu.svg" alt="trofeu-ganhador" class="w-80">
+                <div class="flex gap-4 mt-2">
+                    <div class="">
+                        <button class="min-w-40 px-4 py-2 bg-green-500 text-white rounded-lg">Jogar Novamente</button>
+                    </div>
+                    <div class="">
+                        <button class="min-w-40 px-4 py-2 bg-red-500 text-white rounded-lg">Encerrar Jogo</button>
+                    </div>
+                </div>
+            </section>
+        </dialog>
+    </div>
     <header class="flex justify-between p-6 bg-red-500">
         <section class="">
-            <h2 id="js-nome-jogador01">Jogador 01</h2>
+            <h2 id="js-nome-jogador01" class="text-center bg-black text-white font-bold m-auto w-32 h-7">Jogador 01</h2>
             <div class="">
-                <input id="js-placar-jog01" type="number" value="0">
+                <input id="js-placar-jog01" type="number" value="0" class="w-32 text-center" readonly>
             </div>
         </section>
         <section>
@@ -46,9 +68,9 @@
             </div>
         </section>
         <section class="">
-            <h2 id="js-nome-jogador02">Jogador 02</h2>
+            <h2 id="js-nome-jogador02" class="text-center bg-black text-white font-bold m-auto w-32 h-7">Jogador 02</h2>
             <div class="">
-                <input id="js-placar-jog02" type="number" value="0">
+                <input id="js-placar-jog02" type="number" value="0" class="w-32 text-center" readonly>
             </div>
         </section>
     </header>
@@ -56,7 +78,7 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog01"  class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
+                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-600" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
             </div>
         </section>
         <section class="p-2 bg-red-500 text-center">
@@ -75,7 +97,7 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog02" class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-500" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
+                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-600" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
             </div>
         </section>
     </main>
