--- a/src/index.html
+++ b/src/index.html
@@ -25,23 +25,35 @@
             </section>
         </dialog>
     </div>
-    <div class="hidden w-full h-full fixed flex justify-center items-center bg-[#0000004a]">
-        <dialog class="p-7 rounded-2xl text-center relative">
-            <button class="z-10 absolute -right-5 -top-5 p-2 rounded-full w-12 h-12 bg-black text-white font-bold">X</button>
+    <div id="js-modal-ganhador-fundo" class="hidden z-10 w-full h-full fixed flex justify-center items-center bg-[#0000004a]">
+        <dialog id="js-modal-ganhador" class="z-20 p-7 rounded-2xl text-center relative overflow-visible">
+            <button id="js-fechar-modal-ganhador" class="absolute -right-5 -top-5 p-2 rounded-full w-12 h-12 bg-black text-white font-bold" onclick="fecharModalGanhador()">X</button>
             <section class="flex flex-col justify-center items-center">
-                <div class="font-bold">
-                    <span class="text-2xl">Você Ganhou!!!</span>
+                <div>
+                    <span id="js-frase-ganhador" class="text-2xl font-bold">Você Ganhou!!!</span>
                 </div>
                 <div class="pt-1 font-bold ">
-                    <span id="js-nome-ganhador" class="text-5xl font-bold uppercase">Natanael</span>
+                    <span id="js-nome-ganhador" class="text-6xl font-bold uppercase">Natanael</span>
                 </div>
-                <img src="/img/trofeu.svg" alt="trofeu-ganhador" class="w-80">
-                <div class="flex gap-4 mt-2">
-                    <div class="">
-                        <button class="min-w-40 px-4 py-2 bg-green-500 text-white rounded-lg">Jogar Novamente</button>
+                <div class="flex justify-center items-center gap-4">
+                    <div id="js-modal-vencedor" class="hidden flex-col gap-5 min-w-80">
+                        <span id="js-nome-vencedor-jogo" class="uppercase font-bold text-5xl">NATANAEL</span>
+                        <span id="js-placar-vencedor-jogo" class="font-bold text-5xl">0</span>
                     </div>
                     <div class="">
-                        <button class="min-w-40 px-4 py-2 bg-red-500 text-white rounded-lg">Encerrar Jogo</button>
+                        <img src="/img/trofeu.svg" alt="trofeu-ganhador" class="w-80">
+                    </div>
+                    <div id="js-modal-perdedor" class="hidden flex-col gap-5 min-w-80">
+                        <span id="js-nome-perdedor-jogo" class="uppercase font-bold text-5xl">VICTOR</span>
+                        <span id="js-placar-perdedor-jogo" class="font-bold text-5xl">0</span>
+                    </div>
+                </div>
+                <div id="js-botoes-modal-ganhador" class="flex gap-4 mt-2">
+                    <div class="">
+                        <button class="min-w-40 px-4 py-2 bg-green-500 text-white rounded-lg" onclick="novaPartida()">Jogar Novamente</button>
+                    </div>
+                    <div class="">
+                        <button id="js-botao-encerrar-jogo" class="min-w-40 px-4 py-2 bg-red-500 text-white rounded-lg" onclick="encerrarJogo()">Encerrar Jogo</button>
                     </div>
                 </div>
             </section>
@@ -51,7 +63,7 @@
         <section class="">
             <h2 id="js-nome-jogador01" class="text-center bg-black text-white font-bold m-auto w-32 h-7">Jogador 01</h2>
             <div class="">
-                <input id="js-placar-jog01" type="number" value="0" class="w-32 text-center" readonly>
+                <input id="js-placar-jog01" type="number" value="0" class="w-32 text-center">
             </div>
         </section>
         <section>
@@ -70,7 +82,7 @@
         <section class="">
             <h2 id="js-nome-jogador02" class="text-center bg-black text-white font-bold m-auto w-32 h-7">Jogador 02</h2>
             <div class="">
-                <input id="js-placar-jog02" type="number" value="0" class="w-32 text-center" readonly>
+                <input id="js-placar-jog02" type="number" value="0" class="w-32 text-center">
             </div>
         </section>
     </header>
@@ -78,7 +90,7 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog01"  class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-600" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
+                <button type="button" id="js-botao-jog01" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-disableButton" onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog01').value, true)">Jogar</button>
             </div>
         </section>
         <section class="p-2 bg-red-500 text-center">
@@ -97,20 +109,20 @@
         <section class="p-6">
             <div class="flex flex-col">
                 <input id="js-input-valor-jog02" class="text-center rounded-md" type="number" placeholder="Digite um número">
-                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-gray-600" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
+                <button type="button" id="js-botao-jog02" class="mt-2 p-2 bg-green-500 text-white font-bold disabled:bg-disableButton" disabled onclick="solicitarNumeroJogador(document.getElementById('js-input-valor-jog02').value, false)">Jogar</button>
             </div>
         </section>
     </main>
     <footer class="bg-red-500 p-4">
         <section class="flex justify-between items-center">
             <div class="">
-                <button class="w-36 p-2 text-white font-bold bg-black">Restart</button>
+                <button class="w-36 p-2 text-white font-bold bg-black" onclick="novaPartida()">Restart</button>
             </div>
             <div class="">
                 <button id="js-button-iniciar-partida" class="w-36 p-2 text-white font-bold bg-green-500 " onclick="iniciarPartida()">Iniciar</button>
             </div>
             <div class="">
-                <button class="w-36 p-2 text-white font-bold bg-yellow-500">Finalizar</button>
+                <button class="w-36 p-2 text-white font-bold bg-yellow-500" onclick="  encerrarJogo()">Finalizar</button>
             </div>
         </section>
     </footer>
